<resources>
    <string name="app_name">Smart-Sunrise</string>
    <string name="action_settings">Settings</string>
    <string name="wakeup_zero_time">00:00</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="wakeup_AlarmSet">Alarm is active</string>
    <string name="wakeup_AlarmNotSet">Alarm is inactive</string>
    <string name="wakeup_no_alarm">No Alarm Set</string>
    <string name="wakeup_set_alarm_name">Set Alarm Name</string>
    <string name="wakeup_set_alarm_minutes">Set Minutes</string>
    <string name="wakeup_set_alarm_song_menu">Choose Alarm</string>
    <string name="wakeup_set_alarm_artist">Choose Artiste</string>
    <string name="wakeup_set_alarm_album">Choose Album</string>
    <string name="wakeup_set_alarm_song">Choose Song</string>
    <string name="wakeup_set_alarm_song_Volume">Set Music Volume</string>
    <string name="wakeup_set_alarm_song_Start">Set Start Time</string>
    <string name="wakeup_set_alarm_song_fadeIn">Set FadeIn Time</string>
    <string name="wakeup_set_alarm_song_vibration">Set Vibration Strength</string>
    <string name="wakeup_set_alarm_color">Choose Color</string>
    <string name="wakeup_set_alarm_light_brightness">Set Screen Brightness</string>
    <string name="wakeup_set_alarm_light_minutes">Set Minutes</string>
    <string name="wakeup_set_alarm_LED_time">Set Minutes</string>
    <string name="wakeup_OK">OK</string>
    <string name="wakeup_Cancel">Cancel</string>
    <string name="permlab_flashlight">Flashlight</string>
    <string name="permdesc_flashlight">Make use of the Flashlight</string>
    <string name="wakeup_time">Time</string>
    <plurals name="wakeup_time_minutes">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <string name="wakeup_time_wakeup">Wake Up</string>
    <string name="wakeup_time_wakeup_big">WAKE UP</string>
    <string name="wakeup_time_snooze_big">SNOOZE</string>
    <plurals name="wakeup_time_snooze">
        <item quantity="one">Snooze %d minute.</item>
        <item quantity="other">Snooze %d minutes.</item>
    </plurals>
    <string name="wakeup_day">Days</string>
    <string name="wakeup_day_monday">Monday</string>
    <string name="wakeup_day_tuesday">Tuesday</string>
    <string name="wakeup_day_wednesday">Wednesday</string>
    <string name="wakeup_day_thursday">Thursday</string>
    <string name="wakeup_day_friday">Friday</string>
    <string name="wakeup_day_saturday">Saturday</string>
    <string name="wakeup_day_sunday">Sunday</string>
    <string name="wakeup_day_monday_short">MO</string>
    <string name="wakeup_day_tuesday_short">TU</string>
    <string name="wakeup_day_wednesday_short">WE</string>
    <string name="wakeup_day_thursday_short">TH</string>
    <string name="wakeup_day_friday_short">FR</string>
    <string name="wakeup_day_saturday_short">SA</string>
    <string name="wakeup_day_sunday_short">SU</string>
    <string name="wakeup_music">Music</string>
    <string name="wakeup_music_100">100</string>
    <string name="wakeup_music_choose">Choose Music</string>
    <string name="wakeup_music_ringtone">Ringtone</string>
    <string name="wakeup_music_music">Music</string>
    <string name="wakeup_music_vibraOn">ON</string>
    <string name="wakeup_music_vibraOff">OFF</string>
    <string name="wakeup_music_fadeOn">ON</string>
    <string name="wakeup_music_fadeOff">OFF</string>
    <string name="wakeup_music_text_startTime">Start Time</string>
    <string name="wakeup_music_text_fadeIn">FadeIn</string>
    <string name="wakeup_music_text_vibration">Vibration</string>
    <string name="wakeup_light">Light</string>
    <string name="wakeup_light_zero">0 Minutes</string>
    <string name="wakeup_light_screen_brightness">Screen Brightness</string>
    <string name="wakeup_light_screen_brightness_off">Use System Illumination</string>
    <string name="wakeup_light_screen_color1">Color1</string>
    <string name="wakeup_light_screen_color2">Color2</string>
    <string name="wakeup_light_screen_fadingOn">Fading</string>
    <string name="wakeup_light_screen_fadingOff">No Fading</string>
    <string name="wakeup_light_screen_LEDOn">LED ON</string>
    <string name="wakeup_light_screen_LEDOff">LED OFF</string>
    <string name="wakeup_light_text_startTime">Start Time before Alarm</string>
    <string name="wakeup_delete">Delete</string>
    <string name="wakeup_music_no_music">No Music on Device</string>
    <string name="wakeup_music_no_sd_card">No External Storage Available</string>
    <string name="wakeup_music_no_fadeIn">Start Time to long, No Time left for FadeIn</string>
    <string name="delete_warning">Hold Button to delete Alarm</string>
    <string name="image_color_gradient_listView">This is the Gradient seen in the Brightness List Child</string>
    <string name="toast_positive_alarm">Alarm is active.\nTime: %s</string>
    <string name="toast_negative_alarm">Alarm is inactive.</string>
    <string name="toast_AlarmName_positive">New Name set to \"%s\."</string>
    <string name="toast_AlarmSet_negative">New Name is \"%s\".\r\nAlarm is inactive</string>
    <string name="toast_AlarmTime_positive">Music starts at %s.</string>
    <string name="toast_AlarmTime_negative">Music Starts at %s.\r\nAlarm is inactive</string>
    <string name="toast_AlarmMusic_positive">Music set to %s.</string>
    <string name="toast_AlarmMusic_negative">Music set to %s.\r\nAlarm is inactive</string>
    <string name="toast_AlarmVolume_positive">Volume set to %d.</string>
    <string name="toast_AlarmVolume_negative">Volume set to %d.\r\nAlarm is inactive</string>
    <string name="toast_AlarmVibrationStrength_positive">Vibration strength set to %d.</string>
    <string name="toast_AlarmVibrationStrength_negative">Vibration strength set to %d.\r\nAlarm is inactive</string>
    <string name="toast_AlarmScreenBrightness_positive">Brightness set to %d.</string>
    <string name="toast_AlarmScreenBrightness_negative">Brightness set to %d.\r\nAlarm is inactive</string>
    <plurals name="toast_AlarmSnooze_positive">
        <item quantity="one">Set Snooze to %d minute.</item>
        <item quantity="other">Set Snooze to %d minutes.</item>
    </plurals>
    <plurals name="toast_AlarmSnooze_negative">
        <item quantity="one">Set Snooze to %d minutes\r\nAlarm is inactive</item>
        <item quantity="other">Set Snooze to %d minutes.\r\nAlarm is inactive</item>
    </plurals>
    <plurals name="toast_AlarmSongStart_positive">
        <item quantity="one">Music starts at %d second.</item>
        <item quantity="other">Music starts at %d seconds.</item>
    </plurals>
    <plurals name="toast_AlarmSongStart_negative">
        <item quantity="one">Music starts at %d second.\r\nAlarm is inactive</item>
        <item quantity="other">Music starts at %d seconds.\r\nAlarm is inactive</item>
    </plurals>
    <plurals name="toast_AlarmScreenStart_positive">
        <item quantity="one">Screen shines %d minute before Alarm.</item>
        <item quantity="other">Screen shines %d minutes before Alarm.</item>
    </plurals>
    <plurals name="toast_AlarmScreenStart_negative">
        <item quantity="one">Screen shines %d minute before Alarm.\r\nAlarm is inactive</item>
        <item quantity="other">Screen shines %d minutes before Alarm.\r\nAlarm is inactive</item>
    </plurals>
    <plurals name="toast_AlarmLEDStart_positive">
        <item quantity="one">LED shines %d minute before Alarm.</item>
        <item quantity="other">LED shines %d minutes before Alarm.</item>
    </plurals>
    <plurals name="toast_AlarmLEDStart_negative">
        <item quantity="one">LED shines %d minute before Alarm.\r\nAlarm is inactive</item>
        <item quantity="other">LED shines %d minutes before Alarm.\r\nAlarm is inactive</item>
    </plurals>
    <plurals name="toast_AlarmFadeIn_positive">
        <item quantity="one">Music fades %d second in.</item>
        <item quantity="other">Music fades %d seconds in.</item>
    </plurals>
    <plurals name="toast_AlarmFadeIn_negative">
        <item quantity="one">Music fades %d second in.\r\nAlarm is inactive</item>
        <item quantity="other">Music fades %d seconds in.\r\nAlarm is inactive</item>
    </plurals>
    <string name="logging_activity_creating">==============================================================\nCreating Activity</string>
    <string name="logging_activity_created">Activity created</string>
    <string name="logging_activity_stopped">Activity stopped</string>
    <string name="logging_activity_destroyed">Activity destroyed</string>
    <string name="logging_activity_hint">Activity is in Background</string>
    <string name="logging_activity_action">Activity got User Action</string>
    <string name="logging_asyncTask_created" formatted="false">AsyncTask for %s created</string>
    <string name="logging_asyncTask_destroyed" formatted="false">AsyncTask %s will be destroyed</string>
    <string name="logging_asyncTask_finished" formatted="false">AsyncTask %s is finished</string>
    <string name="logging_asyncTask_started" formatted="false">AsyncTask %s started</string>
    <string name="logging_view_switched">Switched View</string>
    <string name="logging_linearLayout">Successfully created LinearLayout</string>
    <string name="logging_runnable_set" formatted="false">Runnable %s set</string>
    <string name="logging_runnable_set_to" formatted="false">Runnable %s set to %d ms</string>
    <string name="logging_user_stop" formatted="false">User pressed WakeUp Button</string>
    <string name="logging_user_snooze" formatted="false">User pressed Snooze Button</string>
    <string name="logging_view_time_build" formatted="false">Time and Calendar Views ready</string>
    <string name="logging_view_procedure_build" formatted="false">Color fading and LED is ready</string>
    <string name="logging_view_animation_start" formatted="false">Animation started, Delay: %d</string>
    <string name="logging_view_animation_end" formatted="false">Animation got cancelled</string>
    <string name="logging_view_animation_stopped" formatted="false">Animation ended</string>
    <string name="logging_view_screen_start" formatted="false">Screen start, initial = %b</string>
    <string name="logging_alarm_id" formatted="false">Alarm %d Name: %s.</string>
    <string name="logging_start_music" formatted="false">Starting Media player with Uri: %s</string>
    <string name="logging_music_playing">Media player playing</string>
    <string name="logging_music_stopped">Media player stopped</string>
    <string name="logging_vibration_started">Vibration started</string>
    <string name="logging_vibration_stopped">Vibration stopped</string>
    <string name="logging_brightness_set">Screen brightness set to %f</string>
    <string name="logging_brightness_steps_set">Screen brightness steps set to %d</string>
    <string name="logging_led_start">LED started</string>
    <string name="logging_led_stop">LED stopped</string>
    <string name="logging_permission_asked">Asking User for Music Permission</string>
    <string name="logging_permission_granted">User granted Permission to read Music Files</string>
    <string name="logging_permission_denied">User denied Permission to read Music Files</string>
    <string name="logging_exception_null" formatted="false">NullPointerException %s: %s</string>
    <string name="logging_exception_io" formatted="false">IOException %s: %s</string>
    <string name="logging_exception" formatted="false">Exception %s: %s</string>
    <string name="logging_error_switch_bounds">%s Switch out of bounds</string>
    <string name="options_LightSteps">Brightness Steps</string>
    <string name="options_Logging">Enable Logging</string>
    <string name="options_Theme">Change Theme</string>
    <string name="options_About">About SmartSunrise</string>
</resources>