<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zhun.sununtouch.smart_sunrise.MainActivity">
    <item
        android:id="@+id/options_brightness_steps"
        android:orderInCategory="1"
        android:title="@string/options_LightSteps"
        app:showAsAction="never" />
    <item
        android:id="@+id/options_theme"
        android:orderInCategory="2"
        android:title="@string/options_Theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/options_logging"
        android:orderInCategory="3"
        android:title="@string/options_Logging"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/options_about"
        android:orderInCategory="4"
        android:title="@string/options_About"
        app:showAsAction="never"/>
</menu>
