<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/wakeup_timer_layout_music">

    <TextView
        android:id="@+id/wakeup_timer_music_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wakeup_music"
        android:textSize="17sp"
        android:textColor="@color/buttonTextColorPrimary"
        android:gravity="center"
        android:textColorHighlight="@color/buttonTextColorSecondary"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/custom_textview"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/wakeup_timer_music_buttonMusic"
            android:text="@string/wakeup_music_choose"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showMusicSettingDialog"
            android:background="@drawable/custom_button"/>

        <Button
            android:id="@+id/wakeup_timer_music_buttonMusicVolume"
            android:text="100%"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="12sp"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showMusicVolumeSettingDialog"
            android:background="@drawable/custom_button"/>

        <TextView
            android:text="@string/wakeup_music_text_startTime"
            android:textColor="@color/textColorPrimary"
            android:textColorHighlight="@color/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/wakeup_timer_music_SongStart"
            android:text="@string/wakeup_zero_time"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showMusicStartSettingDialog"
            android:background="@drawable/custom_button"/>

        <TextView
            android:text="@string/wakeup_music_text_fadeIn"
            android:textColor="@color/textColorPrimary"
            android:textColorHighlight="@color/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ToggleButton
            android:id="@+id/wakeup_timer_music_toggleFadeIn"
            android:textOn="@string/wakeup_music_fadeOn"
            android:textOff="@string/wakeup_music_fadeOff"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showFadeInSettingsDialog"
            android:background="@drawable/custom_toggle"/>

        <TextView
            android:text="@string/wakeup_music_text_vibration"
            android:textColor="@color/textColorPrimary"
            android:textColorHighlight="@color/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ToggleButton
            android:id="@+id/wakeup_timer_music_toggleVibration"
            android:textOn="@string/wakeup_music_vibraOn"
            android:textOff="@string/wakeup_music_vibraOff"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showVibrationSettingDialog"
            android:background="@drawable/custom_toggle"/>
    </GridLayout>

</LinearLayout>
