<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/wakeup_timer_layout_time">

    <TextView
        android:id="@+id/wakeup_timer_time_text_view"
        android:text="@string/wakeup_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:background="?custom_color_text_view"/>

    <Button
        android:id="@+id/wakeup_timer_time_buttonTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wakeup_zero_time"
        android:textSize="16sp"
        android:onClick="showTimeSettingsDialog"/>

    <Button
        android:id="@+id/wakeup_timer_time_buttonSnooze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wakeup_time_snooze_big"
        android:textSize="16sp"
        android:onClick="showMinuteSettingDialog"/>
</LinearLayout>
