<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/wakeup_timer_layout_light">

    <TextView
        android:id="@+id/wakeup_timer_light_text_view"
        android:text="@string/wakeup_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/textColorPrimary"
        android:textColorHighlight="@color/textColorSecondary"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/custom_textview"/>
    
    <GridLayout
        android:id="@+id/wakeup_timer_light_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/wakeup_timer_light_buttonLight"
            android:textOn="@string/wakeup_light_screen_brightness"
            android:textOff="@string/wakeup_light_screen_brightness_off"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="16sp"
            android:layout_column="0"
            android:layout_columnSpan="6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showScreenLightSettingDialog"
            android:background="@drawable/custom_toggle"/>

        <TextView
            android:text="@string/wakeup_light_text_startTime"
            android:textColor="@color/textColorPrimary"
            android:textColorHighlight="@color/textColorSecondary"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/wakeup_timer_light_buttonStart"
            android:text="0 Minutes"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="12sp"
            android:layout_column="3"
            android:layout_columnSpan="3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showScreenLightStartSettingDialog"
            android:background="@drawable/custom_button"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:padding="0dp"
            android:layout_gravity="fill">
            <Button
                android:id="@+id/wakeup_timer_light_buttonColor1"
                android:text="@string/wakeup_light_screen_color1"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:onClick="showScreenColor1SettingDialog"
                android:padding="0dp"
                android:layout_margin="@dimen/button_margin"/>

            <ImageView
                android:contentDescription="@string/image_color_gradient_listView"
                android:id="@+id/wakeup_timer_light_gradient"
                android:layout_gravity="center_vertical"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:id="@+id/wakeup_timer_light_buttonColor2"
                android:text="@string/wakeup_light_screen_color2"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:onClick="showScreenColor1SettingDialog"
                android:padding="0dp"
                android:layout_margin="@dimen/button_margin"/>
        </LinearLayout>


        <ToggleButton
            android:id="@+id/wakeup_timer_light_buttonScreenFade"
            android:textOn="@string/wakeup_light_screen_fadingOn"
            android:textOff="@string/wakeup_light_screen_fadingOff"
            android:textColor="@color/buttonTextColorPrimary"
            android:textSize="12sp"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:layout_column="3"
            android:layout_columnSpan="3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showScreenColorFadeSettingDialog"
            android:background="@drawable/custom_toggle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_column="0"
            android:layout_columnSpan="6"
            android:background="@color/colorPrimary"/>

        <ToggleButton
            android:id="@+id/wakeup_timer_light_buttonLED"
            android:textOn="@string/wakeup_light_screen_LEDOn"
            android:textOff="@string/wakeup_light_screen_LEDOff"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="16sp"
            android:layout_column="0"
            android:layout_columnSpan="6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showLEDLightSettingDialog"
            android:background="@drawable/custom_toggle"/>

        <TextView
            android:text="@string/wakeup_light_text_startTime"
            android:textColor="@color/textColorPrimary"
            android:textColorHighlight="@color/textColorSecondary"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/wakeup_timer_light_buttonLEDStart"
            android:text="0 Minutes"
            android:textColor="@color/buttonTextColorPrimary"
            android:textColorHighlight="@color/buttonTextColorSecondary"
            android:textSize="12sp"
            android:layout_column="3"
            android:layout_columnSpan="3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="showLEDLightStartSettingDialog"
            android:background="@drawable/custom_button"/>
    </GridLayout>
</LinearLayout>
