<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/wakeup_timer_layout_days">

    <TextView
        android:id="@+id/wakeup_timer_days_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dip"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ToggleButton
            android:textOn="@string/wakeup_day_monday_short"
            android:textOff="@string/wakeup_day_monday_short"
            android:id="@+id/wakeup_monday"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDaysSet"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2px"
            android:background="#90909090"/>

        <ToggleButton
            android:textOn="@string/wakeup_day_tuesday_short"
            android:textOff="@string/wakeup_day_tuesday_short"
            android:id="@+id/wakeup_tuesday"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDaysSet"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2px"
            android:background="#90909090"/>

        <ToggleButton
            android:textOn="@string/wakeup_day_wednesday_short"
            android:textOff="@string/wakeup_day_wednesday_short"
            android:id="@+id/wakeup_wednesday"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDaysSet"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2px"
            android:background="#90909090"/>

        <ToggleButton
            android:textOn="@string/wakeup_day_thursday_short"
            android:textOff="@string/wakeup_day_thursday_short"
            android:id="@+id/wakeup_thursday"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDaysSet"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2px"
            android:background="#90909090"/>

        <ToggleButton
            android:textOn="@string/wakeup_day_friday_short"
            android:textOff="@string/wakeup_day_friday_short"
            android:id="@+id/wakeup_friday"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDaysSet"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2px"
            android:background="#90909090"/>

        <ToggleButton
            android:textOn="@string/wakeup_day_saturday_short"
            android:textOff="@string/wakeup_day_saturday_short"
            android:id="@+id/wakeup_saturday"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDaysSet"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2px"
            android:background="#90909090"/>

        <ToggleButton
            android:textOn="@string/wakeup_day_sunday_short"
            android:textOff="@string/wakeup_day_sunday_short"
            android:id="@+id/wakeup_sunday"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:padding="2dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDaysSet"/>
    </LinearLayout>
</LinearLayout>
