<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/wakeup_timer_layout_delete">

    <TextView
        android:id="@+id/wakeup_timer_delete_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="0dip"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="0"
            android:id="@+id/wakeup_timer_deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wakeup_delete"
            android:focusable="false"
            android:onClick="deleteChild"/>

        <ToggleButton
            android:layout_weight="1"
            android:id="@+id/wakeup_timer_setAlarmButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textOn="@string/wakeup_AlarmSet"
            android:textOff="@string/wakeup_AlarmNotSet"
            android:focusable="false"
            android:onClick="setNewAlarm"/>

    </LinearLayout>


</LinearLayout>
